--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,14 +22,14 @@ jobs:
           name: Waiting for Postgres to be ready
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - checkout
-      - run: rebuild
-      - run: rm -rf node_modules && rm package-lock.json
-      - run: npm cache clean 
-      - run: prisma migrate reset
-      - run: prisma migrate dev
+      - run: npm rebuild
+      - run: npm cache clean --force
+      - run: npm i
       - save_cache:
           paths:
             - node_modules
           key: v1-deps-{{ checksum "package.json" }}
+      - run: prisma migrate reset
+      - run: prisma migrate dev
       - run: nx serve api
       - run: nx e2e api-e2e
